--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 <body>
   <div class="container">
     <aside class="sidebar">
-      <h1>My Portfolio</h1>
+      <h1>Oleksii Podat</h1>
       <nav>
         <a href="#about">About</a>
         <a href="#work">Work</a>
@@ -69,27 +69,23 @@
     <main class="content">
       <section id="about">
         <h2>About</h2>
-        <p>This is a minimalist portfolio inspired by Indexhibit.</p>
+        <p>Oleksii Podat is an avant-garde composer and producer from Sloviansk. He works with both small and large musical forms, in particular, his compositions can be heard in audiovisual art projects and films. Radical methods of sound production, genuine pop sensitivity and avant garde playfulness distinguish his music on Ukraine's experimental scene, while his self-proclaimed "melodic noise" genre is becoming its defining component.</p>
       </section>
       <section id="work">
         <h2>Work</h2>
 
         <div class="project">
-          <h3>Project One</h3>
-          <p>Short description of the project.</p>
-          <img src="project1.jpg" alt="Project One Screenshot" />
+          <h3>2016 - <a href="https://www.youtube.com/watch?v=NXbWc3-jLpI">Exile</a></h3>
+          <p>A/V performance in collaboration with Kharkiv Theatre of Lightpainting</p>
         </div>
-
         <div class="project">
-          <h3>Project Two</h3>
-          <p>Description for project two.</p>
-          <img src="project2.jpg" alt="Project Two Screenshot" />
+          <h3>2017 - <a href="https://www.youtube.com/watch?v=opy0FzaBqsg"> Future Perfect</a></h3>
+          <p>Audio performance with radio transmitter in Jam Factory, Lviv</p>
         </div>
-
       </section>
       <section id="contact">
         <h2>Contact</h2>
-        <p>Email me at example@example.com</p>
+        <p><a href="mailto:someone@example.com">oleksiipodat@icloud.com</a></p>
       </section>
     </main>
   </div>
