--- a/index.html
+++ b/index.html
@@ -73,6 +73,11 @@
       </section>
       <section id="work">
         <h2>Work</h2>
+                <div class="project">
+          <h3>2023 - <a href="https://dovzhenkocentre.org/en/exhibition/the-river-wailed-like-a-wounded-beast/">The River Wailed Like a Wounded Beast</a></h3>
+          <p>Audio installation in Dovzhenko Center, Kyiv during Kyiv Biennal 2023</p>
+                  <iframe width="560" height="315" src="https://www.youtube.com/embed/vlXa408htcw?si=frz8gs8aZvdy6mgr" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        </div>
         <div class="project">
           <h3>2016 - <a href="https://www.youtube.com/watch?v=NXbWc3-jLpI">Exile</a></h3>
           <p>A/V performance in collaboration with Kharkiv Theatre of Lightpainting</p>
