--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
       box-sizing: border-box;
     }
     .sidebar h1 {
-      font-size: 20px;
-      margin-bottom: 40px;
+      font-size: 19px;
+      margin-bottom: 8px;
     }
     .sidebar nav a {
       display: block;
@@ -62,7 +62,7 @@
       <h1>Oleksii Podat</h1>
       <nav>
         <a href="#about">About</a>
-        <a href="#work">Work</a>
+        <a href="#work">Projects</a>
         <a href="#contact">Contact</a>
       </nav>
     </aside>
@@ -72,7 +72,7 @@
         <p>Oleksii Podat is an avant-garde composer and producer from Sloviansk. He works with both small and large musical forms, in particular, his compositions can be heard in audiovisual art projects and films. Radical methods of sound production, genuine pop sensitivity and avant garde playfulness distinguish his music on Ukraine's experimental scene, while his self-proclaimed "melodic noise" genre is becoming its defining component.</p>
       </section>
       <section id="work">
-        <h2>Work</h2>
+        <h2>Projects</h2>
                 <div class="project">
           <h3>2023 - <a href="https://dovzhenkocentre.org/en/exhibition/the-river-wailed-like-a-wounded-beast/">The River Wailed Like a Wounded Beast</a></h3>
           <p>Audio installation in Dovzhenko Center, Kyiv during Kyiv Biennal 2023</p>
