--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Portfolio</title>
+  <title>Oleksii Podat portfolio</title>
   <style>
     body {
       margin: 0;
@@ -17,7 +17,7 @@
     }
     .sidebar {
       width: 250px;
-      background: #fff;
+      background: #fbfbfb;
       border-right: 1px solid #ccc;
       padding: 20px;
       box-sizing: border-box;
@@ -30,21 +30,21 @@
       display: block;
       text-decoration: none;
       color: #000;
-      margin-bottom: 10px;
+      margin-bottom: 2px;
     }
     .sidebar nav a:hover {
       text-decoration: underline;
     }
     .content {
       flex-grow: 1;
-      padding: 40px;
+      padding: 18px;
       box-sizing: border-box;
     }
     .project {
-      margin-bottom: 60px;
+      margin-bottom: 0px;
     }
     .project h2 {
-      margin-bottom: 10px;
+      margin-bottom: 0px;
     }
     .project p {
       margin-top: 0;
