--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@ p {
         <h2>Projects</h2>
         <div class="project">
           <h3>2025 - <a href="https://pro.festivalscope.com/film/all-roads-lead-to-you">All roads lead to you OST</a></h3>
-          <p><a href="https://vimeo.com/1062215056">Music</a> for movie, dir. Jenya Milyukos Prykhodko</p>
+          <p><a href="https://vimeo.com/1062215056">Music</a> for movie, dir. Jenya Milyukosß</p>
         </div>
         <div class="project">
           <h3>2024 - <a href="https://takflix.com/en/films/new_home">New Home OST</a></h3>
@@ -140,15 +140,23 @@ p {
           <p><a href="https://youtu.be/opy0FzaBqsg">Audio performance</a> with radio transmitter in Jam Factory, Lviv</p>
           </div>
       </section>
+      <section id="performances">
+        <h2>Performances</h2>
+        <p>--.--.---- - TBA - TBA</p>
+        <p><b>16.08.2025</b> - Cxema Backstage - Otel', Kyiv</p>
+        <p><b>19.07.2025</b> - Detaliзація - Ivano-Frankivsk</p>
+        <p><b>28.06.2025</b> - Bloomed in September label showcase - 20ft Radio, Kyiv</p>
+        <p><b>21.06.2025</b> - Plyazh festival - Scene 5, Kharkiv</p>
+        <p><b>15.06.2025</b> - Brudnyi Pes festival - Keller, Kyiv</p>
+        <p><b>08.06.2025</b> - Zhanna Kadyrova's Instrument - Lviv Railway Station</p>
+        <p><b>07.06.2025</b> - Vegan Weekend - K41 Concert Hall, Kyiv</p>
+        <p><b>05.06.2025</b> - Word Attempts performance (w/ Maria Matiashova, Tamara Turliun) - Dasha Katsurina Studio X Naked Room, Kyiv</p>
+           </section>
       <section id="contact">
         <h2>Contact</h2>
         <p><a href="mailto:oleksiipodat@icloud.com">oleksiipodat@icloud.com</a></p>
       </section>
-         <main class="content">
-           <section id="performances">
-        <h2> Performances</h2>
-         <p>2025 - ad</p>
-           </section>
+    
            
     </main>
   </div>
