--- a/index.html
+++ b/index.html
@@ -107,9 +107,13 @@ p {
       </section>
       <section id="work">
         <h2>Projects</h2>
+         <div class="project">
+          <h3>2025 - <a href="https://issueprojectroom.org/event/distant-pairs-oleksii-podat-suzanne-thorpe">Times Zone Response</a></h3>
+          <p><a href="https://issueprojectroom.org/video/distant-pairs-oleksii-podat-suzanne-thorpe">AV project</a> in collaboration with Suzanne Thorpe</p>
+        </div>
         <div class="project">
           <h3>2025 - <a href="https://pro.festivalscope.com/film/all-roads-lead-to-you">All roads lead to you OST</a></h3>
-          <p><a href="https://vimeo.com/1062215056">Music</a> for movie, dir. Jenya Milyukosß</p>
+          <p><a href="https://vimeo.com/1062215056">Music</a> for movie, dir. Jenya Milyukos</p>
         </div>
         <div class="project">
           <h3>2024 - <a href="https://takflix.com/en/films/new_home">New Home OST</a></h3>
@@ -142,7 +146,7 @@ p {
       </section>
       <section id="performances">
         <h2>Performances</h2>
-        <p>--.--.---- - TBA - TBA</p>
+        
         <p><b>16.08.2025</b> - Cxema Backstage - Otel', Kyiv</p>
         <p><b>19.07.2025</b> - Detaliзація - Ivano-Frankivsk</p>
         <p><b>28.06.2025</b> - Bloomed in September label showcase - 20ft Radio, Kyiv</p>
