--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@ p {
       <nav>
         <a href="#about">About</a>
         <a href="#work">Projects</a>
-        <a href="#performances">Performances</a>
+        <a href="#performances">Live acts</a>
         <a href="#contact">Contact</a>
       </nav>
     </aside>
@@ -145,7 +145,7 @@ p {
           </div>
       </section>
       <section id="performances">
-        <h2>Performances</h2>
+        <h2>Live acts</h2>
         
         <p><b>16.08.2025</b> - Cxema Backstage - Otel', Kyiv</p>
         <p><b>19.07.2025</b> - Detaliзація - Ivano-Frankivsk</p>
