--- a/index.html
+++ b/index.html
@@ -16,14 +16,17 @@
 
 h2 {
   font-size: 16px;
+  color: #505050
 }
 
 h3 {
   font-size: 14px;
+  color: #505050
 }
 
 p {
   font-size: 14px;
+  color: #505050
 }
     }
     .container {
@@ -52,17 +55,19 @@ p {
       }
     }
     .sidebar h1 {
-      font-size: 16px;
+      font-size: 20px;
       margin-bottom: 10px;
+      color: #464646
     }
     .sidebar nav a {
       display: block;
       text-decoration: none;
-      color: #000;
+      color: #505050;
       margin-bottom: 8px;
     }
     .sidebar nav a:hover {
-      text-decoration: underline;
+      text-decoration:;
+      color: #858585
     }
     .content {
       flex-grow: 1;
@@ -71,21 +76,26 @@ p {
     }
     .project {
       margin-bottom: 0px;
+      color: #505050
     }
     .project h2, .project h3 {
       margin-bottom: 10px;
+      color: #505050
     }
     .project p {
       margin-top: 0;
+      
     }
     .project iframe {
       width: 50%;
       max-width: 50%;
       height: auto;
       aspect-ratio: 16/9;
+      color: #505050
     }
     a {
       word-break: break-word;
+      color: #505050
     }
   </style>
 </head>
