--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@ p {
     
     <main class="content">
       <section id="about">
-        <img src='https://i.postimg.cc/mrx7yP5r/temp-Image-Aq6k-F7.avif' border='0' alt='Oleksii Podat'/>
+        <img src="https://i.postimg.cc/k58zTtMY/temp-Image-Wx-OXOv.avif" width="150" height="150" alt='Oleksii Podat'/>
         <h2>About</h2>
         <p>Oleksii Podat is an avant-garde composer and producer from Sloviansk. He works with both small and large musical forms, in particular, his compositions can be heard in audiovisual art projects and films. Radical methods of sound production, genuine pop sensitivity and avant garde playfulness distinguish his music on Ukraine's experimental scene, while his self-proclaimed "melodic noise" genre is becoming its defining component.</p>
       </section>
