--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@ p {
     }
     .content {
       flex-grow: 1;
-      padding: 39px;
+      padding: 20px;
       box-sizing: border-box;
     }
     .project {
@@ -107,6 +107,7 @@ p {
         <a href="#about">About</a>
         <a href="#work">Projects</a>
         <a href="#performances">Live acts</a>
+        <a href="#releases">Releases</a>
         <a href="#contact">Contact</a>
         
       </nav>
@@ -145,6 +146,10 @@ p {
           <p>Music for short movie, dir. Sashko Protyah</p>
             </div>
         <div class="project">
+          <h3>2022 - <a href="https://www.youtube.com/watch?v=Huo49wI8FE4">The 51st International Film Festival Molodist</a></h3>
+          <p><a href="https://www.youtube.com/watch?v=g8kDOG5tg6w">Music</a> for trailers</p>
+            </div>
+        <div class="project">
           <h3>2019 - <a href="https://www.youtube.com/watch?v=SS_RTLlqS0k&embeds_referring_euri=https%3A%2F%2Fsites.google.com%2F&source_ve_path=MjM4NTE">Life outside CV OST</a></h3>
           <p>Soundtrack for short movie, dir. Sashko Protyah</p>
             </div>
@@ -169,6 +174,11 @@ p {
         <p><b>07.06.2025</b> - Vegan Weekend - K41 Concert Hall, Kyiv</p>
         <p><b>05.06.2025</b> - Word Attempts performance (w/ Maria Matiashova, Tamara Turliun) - Dasha Katsurina Studio X Naked Room, Kyiv</p>
            </section>
+      <section id="releases">
+      <h2>Releases</h2>
+        <img src='https://i.postimg.cc/mZH3tf24/temp-Image-Jlw-VP4.avif'/>
+        <center><a href="https://www.linktr.ee/podat">listen</a></center>
+      </section>
       <section id="contact">
         <h2>Contact</h2>
         <p><a href="mailto:oleksiipodat@icloud.com">oleksiipodat@icloud.com</a></p>
