--- a/index.html
+++ b/index.html
@@ -176,8 +176,9 @@ p {
            </section>
       <section id="releases">
       <h2>Releases</h2>
-        <img src='https://i.postimg.cc/mZH3tf24/temp-Image-Jlw-VP4.avif'/>
-        <center><a href="https://www.linktr.ee/podat">listen</a></center>
+        <img src='https://i.postimg.cc/vmhq2Rxk/temp-Image-GLl-Hs-D.avif'>
+<p></p>
+        <a href="https://www.linktr.ee/podat">listen</a>
       </section>
       <section id="contact">
         <h2>Contact</h2>
