--- a/index.html
+++ b/index.html
@@ -117,7 +117,9 @@ p {
       <section id="about">
         <img src="https://i.postimg.cc/k58zTtMY/temp-Image-Wx-OXOv.avif" width="150" height="150" alt='Oleksii Podat'/>
         <h2>About</h2>
-        <p>Oleksii Podat is an avant-garde composer and producer from Sloviansk. He works with both small and large musical forms, in particular, his compositions can be heard in audiovisual art projects and films. Radical methods of sound production, genuine pop sensitivity and avant garde playfulness distinguish his music on Ukraine's experimental scene, while his self-proclaimed "melodic noise" genre is becoming its defining component.</p>
+        <div style="max-width: 500px;">
+  <p>Oleksii Podat is an avant-garde composer and producer from Sloviansk. He works with both small and large musical forms, in particular, his compositions can be heard in audiovisual art projects and films. Radical methods of sound production, genuine pop sensitivity and avant garde playfulness distinguish his music on Ukraine's experimental scene, while his self-proclaimed "melodic noise" genre is becoming its defining component.</p>
+</div>
       </section>
       <section id="work">
         <h2>Projects</h2>
@@ -164,7 +166,7 @@ p {
       </section>
       <section id="performances">
         <h2>Live acts</h2>
-        
+        <div style="max-width: 500px;">
         <p><b>16.08.2025</b> - Cxema Backstage - Otel', Kyiv</p>
         <p><b>19.07.2025</b> - Detaliзація - Ivano-Frankivsk</p>
         <p><b>28.06.2025</b> - Bloomed in September label showcase - 20ft Radio, Kyiv</p>
@@ -173,6 +175,7 @@ p {
         <p><b>08.06.2025</b> - Zhanna Kadyrova's Instrument - Lviv Railway Station</p>
         <p><b>07.06.2025</b> - Vegan Weekend - K41 Concert Hall, Kyiv</p>
         <p><b>05.06.2025</b> - Word Attempts performance (w/ Maria Matiashova, Tamara Turliun) - Dasha Katsurina Studio X Naked Room, Kyiv</p>
+        </div>
            </section>
       <section id="releases">
       <h2>Releases</h2>
