--- a/index.html
+++ b/index.html
@@ -108,11 +108,10 @@ p {
         <a href="#work">Projects</a>
         <a href="#performances">Live acts</a>
         <a href="#releases">Releases</a>
+        <a href="#texts">Texts & interviews</a>
         <a href="#contact">Contact</a>
-        
       </nav>
     </aside>
-    
     <main class="content">
       <section id="about">
         <img src="https://i.postimg.cc/k58zTtMY/temp-Image-Wx-OXOv.avif" width="150" height="150" alt='Oleksii Podat'/>
@@ -183,6 +182,13 @@ p {
 <p></p>
         <a href="https://www.linktr.ee/podat">listen</a>
       </section>
+      <section id="texts">
+        <h2>Texts & interviews</h2>
+        <p><a href="https://suspilne.media/culture/883475-ludi-sukaut-bezumovnogo-kohanna-oleksij-podat-pro-albom-spivzaleznist-u-stosunkah-nojz-muziku-ta-slovansk/">Suspilne interview (ukr)</a></p>
+        <p></p>
+        <p><a href="https://artslooker.com/varto-chy-ni-pro-kompiliatsiiu-blackout-tape-vid-20ft-records/">20ft Records 'Blackout Tape' review for ArtsLooker (ukr)</a></p>
+      </section>
+      <p><a href="https://www.by-text.com/texts/narczys-v-eho-kameri/">Narcissus in Echo chamber - essay for by-text (ukr)</a></p>
       <section id="contact">
         <h2>Contact</h2>
         <p><a href="mailto:oleksiipodat@icloud.com">oleksiipodat@icloud.com</a></p>
