--- a/index.html
+++ b/index.html
@@ -179,8 +179,7 @@ p {
       <section id="releases">
       <h2>Releases</h2>
         <img src='https://i.postimg.cc/vmhq2Rxk/temp-Image-GLl-Hs-D.avif'>
-<p></p>
-        <a href="https://www.linktr.ee/podat">listen</a>
+        <p style="font-size: 14px;"><a href="https://www.linktr.ee/podat">listen</a></p>
       </section>
       <section id="texts">
         <h2>Texts & interviews</h2>
