--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@ p {
         <h2>Texts & interviews</h2>
         <p><a href="https://suspilne.media/culture/883475-ludi-sukaut-bezumovnogo-kohanna-oleksij-podat-pro-albom-spivzaleznist-u-stosunkah-nojz-muziku-ta-slovansk/">Suspilne interview (ukr)</a></p>
         <p></p>
-        <p><a href="https://artslooker.com/varto-chy-ni-pro-kompiliatsiiu-blackout-tape-vid-20ft-records/">20ft Records 'Blackout Tape' review for ArtsLooker (ukr)</a></p>
+        <p><a href="https://artslooker.com/varto-chy-ni-pro-kompiliatsiiu-blackout-tape-vid-20ft-records/">20ft Records 'Blackout Tape' review for artslooker (ukr)</a></p>
       </section>
       <p><a href="https://www.by-text.com/texts/narczys-v-eho-kameri/">Narcissus in Echo chamber - essay for by-text (ukr)</a></p>
       <section id="contact">
