--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@ p {
       <section id="work">
         <h2>Projects</h2>
          <div class="project">
-          <h3>2025 - <a href="https://issueprojectroom.org/event/distant-pairs-oleksii-podat-suzanne-thorpe">Times Zone Response</a></h3>
+          <h3>2025 - <a href="https://issueprojectroom.org/event/distant-pairs-oleksii-podat-suzanne-thorpe">Time Zone Response</a></h3>
           <p><a href="https://issueprojectroom.org/video/distant-pairs-oleksii-podat-suzanne-thorpe">A/V project</a> in collaboration with Suzanne Thorpe</p>
         </div>
         <div class="project">
