--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@ p {
         <a href="#work">Projects</a>
         <a href="#performances">Live acts</a>
         <a href="#releases">Releases</a>
-        <a href="#texts">Texts & interviews</a>
+        <a href="#texts">Publications</a>
         <a href="#contact">Contact</a>
       </nav>
     </aside>
@@ -129,6 +129,10 @@ p {
         <div class="project">
           <h3>2025 - <a href="https://pro.festivalscope.com/film/all-roads-lead-to-you">All roads lead to you OST</a></h3>
           <p><a href="https://vimeo.com/1062215056">Music</a> for movie, dir. Jenya Milyukos</p>
+        </div>
+        <div class="project">
+          <h3>2024 - 1</h3>
+          <p>Sound installation in DCCC, Dnipro during <a href="https://kulturamedialna.org/portfolio/sound-working-group/?lang=en">Sound Working Group residency</a></p>
         </div>
         <div class="project">
           <h3>2024 - <a href="https://takflix.com/en/films/new_home">New Home OST</a></h3>
@@ -174,6 +178,14 @@ p {
         <p><b>08.06.2025</b> - Zhanna Kadyrova's Instrument - Lviv Railway Station</p>
         <p><b>07.06.2025</b> - Vegan Weekend - K41 Concert Hall, Kyiv</p>
         <p><b>05.06.2025</b> - Word Attempts performance (w/ Maria Matiashova, Tamara Turliun) - Dasha Katsurina Studio X Naked Room, Kyiv</p>
+        <p><b>24.05.2025</b> - Distant Pairs w/ Maryana Klochko - Jam Factory, Lviv</p>
+        <p><b>14.05.2025</b> - нойз щосереди (Noise Every Wednesday) - Otel', Kyiv</p>
+        <p><b>05.04.2025</b> - концерт шумової музики (noise music concert) - Miskyi Theatre, Kyiv</p>
+        <p><b>22.03.2025</b> - Світломузика - HVLV, Kyiv</p>
+        <p><b>28.12.2024</b> - середмістя - Abo, Kyiv</p>
+        <p><b>25.12.2024</b> - нойз щосереди (Noise Every Wednesday) - Otel', Kyiv</p>
+        <p><b>19.12.2024</b> - поле-фонія, концерт-розмова w/ Mykola Lebed - RVRB, Kyiv</p>
+        etc
         </div>
            </section>
       <section id="releases">
@@ -182,7 +194,7 @@ p {
         <p style="font-size: 14px;"><a href="https://www.linktr.ee/podat">listen</a></p>
       </section>
       <section id="texts">
-        <h2>Texts & interviews</h2>
+        <h2>Publications</h2>
         <p><a href="https://suspilne.media/culture/883475-ludi-sukaut-bezumovnogo-kohanna-oleksij-podat-pro-albom-spivzaleznist-u-stosunkah-nojz-muziku-ta-slovansk/">Suspilne interview (ukr)</a></p>
         <p></p>
         <p><a href="https://artslooker.com/varto-chy-ni-pro-kompiliatsiiu-blackout-tape-vid-20ft-records/">20ft Records 'Blackout Tape' review for artslooker (ukr)</a></p>
