--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@ p {
         <p><b>28.12.2024</b> - середмістя - Abo, Kyiv</p>
         <p><b>25.12.2024</b> - нойз щосереди (Noise Every Wednesday) - Otel', Kyiv</p>
         <p><b>19.12.2024</b> - поле-фонія, концерт-розмова w/ Mykola Lebed - RVRB, Kyiv</p>
-        etc
+        <p>etc</p>
         </div>
            </section>
       <section id="releases">
