--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@ p {
         <p><b>28.06.2025</b> - Bloomed in September label showcase - 20ft Radio, Kyiv</p>
         <p><b>21.06.2025</b> - Plyazh festival - Scene 5, Kharkiv</p>
         <p><b>15.06.2025</b> - Brudnyi Pes festival - Keller, Kyiv</p>
-        <p><b>08.06.2025</b> - Zhanna Kadyrova's Instrument - Lviv Railway Station</p>
+        <p><b>08.06.2025</b> - Zhanna Kadyrova's Instrument performance - Lviv Railway Station</p>
         <p><b>07.06.2025</b> - Vegan Weekend - K41 Concert Hall, Kyiv</p>
         <p><b>05.06.2025</b> - Word Attempts performance (w/ Maria Matiashova, Tamara Turliun) - Dasha Katsurina Studio X Naked Room, Kyiv</p>
         <p><b>24.05.2025</b> - Distant Pairs w/ Maryana Klochko - Jam Factory, Lviv</p>
