--- a/index.html
+++ b/index.html
@@ -197,12 +197,14 @@ p {
       </section>
       <section id="texts">
         <h2>Publications</h2>
+        <div style="max-width: 500px;">
         <p><a href="https://easterndaze.net/noise-every-wednesday-a-lesson-in-sustainability-from-kyivs-experimental-scene/">Noise Every Wednesday: A Lesson in Sustainability From Kyiv’s Experimental Scene</a> for Easterndaze by Olena Pohonchenkova</p>
         <p><a href="https://suspilne.media/culture/883475-ludi-sukaut-bezumovnogo-kohanna-oleksij-podat-pro-albom-spivzaleznist-u-stosunkah-nojz-muziku-ta-slovansk/">Suspilne interview (ukr)</a></p>
         <p></p>
         <p><a href="https://artslooker.com/varto-chy-ni-pro-kompiliatsiiu-blackout-tape-vid-20ft-records/">20ft Records 'Blackout Tape' review for artslooker (ukr)</a></p>
       <p><a href="https://www.by-text.com/texts/narczys-v-eho-kameri/">Narcissus in Echo chamber - essay for by-text (ukr)</a></p>
-      </section>
+        </div>
+          </section>
         <section id="contact">
         <h2>Contact</h2>
         <p><a href="mailto:oleksiipodat@icloud.com">oleksiipodat@icloud.com</a></p>
