--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@ p {
           <p>Music for short movie, dir. Sashko Protyah</p>
             </div>
         <div class="project">
-          <h3>2022 - <a href="https://www.youtube.com/watch?v=Huo49wI8FE4">The 51st International Film Festival Molodist</a></h3>
+          <h3>2022 - <a href="https://www.youtube.com/watch?v=Huo49wI8FE4">The 51st International Film Festival Molodist, Kyiv</a></h3>
           <p><a href="https://www.youtube.com/watch?v=g8kDOG5tg6w">Music</a> for trailers</p>
             </div>
         <div class="project">
