--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@ p {
       }
     }
     .sidebar {
+      position: fixed;
       width: 100%;
       background: #fbfbfb;
       border-bottom: 0px solid #ccc;
