--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@ p {
       <section id="releases">
       <h2>Releases</h2>
         <p><b>2024</b> - <a href="https://orcd.co/nadni">лагідні стосунки зі світом на дні землі</a> - ПОТОП</p>
-        <p><b>2023</b> - Golden Gate</p>
+        <p><b>2023</b> - <a href="https://podat.bandcamp.com/album/golden-gate">Golden Gate</a></p>
         <img src='https://i.postimg.cc/vmhq2Rxk/temp-Image-GLl-Hs-D.avif'>
         <p style="font-size: 16px;"><a href="https://www.linktr.ee/podat" target="_blank" rel="noopener noreferrer">more</a></p>
       </section>
