--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
   <title>Oleksii Podat / Олексій Подать</title>
   <style>
     body 
+    {
+  font-family: Arial, sans-serif;
+}
       details summary {
     list-style: none;       /* прибирає стандартну стрілку */
     cursor: pointer;
