--- a/index.html
+++ b/index.html
@@ -6,8 +6,14 @@
   <title>Oleksii Podat / Олексій Подать</title>
   <style>
     body 
+
     {
   font-family: Arial, sans-serif;
+}
+        .about-box {
+  max-width: 400px;
+  text-align: justify;
+  line-height: 1.5;
 }
       details summary {
     list-style: none;       /* прибирає стандартну стрілку */
@@ -146,7 +152,7 @@ p {
         <img src="https://i.postimg.cc/k58zTtMY/temp-Image-Wx-OXOv.avif" width="150" height="150" alt='Oleksii Podat'/>
         <h2></h2>
         
-        <div style="max-width: 500px;">
+        <div class="about-box">
           
   <p>Oleksii Podat (b. 1996) is an avant-garde composer and producer from Sloviansk. He works with both small and large musical forms, in particular, his compositions can be heard in audiovisual art projects and films. Radical methods of sound production, genuine pop sensitivity and avant garde playfulness distinguish his music on Ukraine's experimental scene, while his self-proclaimed "melodic noise" genre is becoming its defining component.</p>
 </div>
