--- a/index.html
+++ b/index.html
@@ -258,5 +258,14 @@ p {
            
     </main>
   </div>
+  <script>
+  document.addEventListener("DOMContentLoaded", function () {
+    const links = document.querySelectorAll("a[href^='http']");
+    links.forEach(link => {
+      link.setAttribute("target", "_blank");
+      link.setAttribute("rel", "noopener noreferrer");
+    });
+  });
+</script>
 </body>
 </html>
