--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@
 
     {
   font-family: Arial, sans-serif;
+background: #f5f5f5;
+  color: #505050;
 }
+    }
         .about-box {
   max-width: 520px;
   text-align: justify;
