--- a/index.html
+++ b/index.html
@@ -9,9 +9,7 @@
 
     {
   font-family: Arial, sans-serif;
-background: #f5f5f5;
-  color: #505050;
-}
+
     }
         .about-box {
   max-width: 520px;
@@ -46,7 +44,8 @@ background: #f5f5f5;
       margin: 0;
       font-family: Arial, sans-serif;
       background: #f5f5f5;
-      color: #000;
+      color: #000;}
+      
       h1 {
   font-size: 14px;
 }
