--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
               <h2>Projects</h2>
               <div class="project">
                 <h3>2025 - <a href="https://issueprojectroom.org/event/distant-pairs-oleksii-podat-suzanne-thorpe">Time Zone Response</a></h3>
-                <p><a href="https://issueprojectroom.org/video/distant-pairs-oleksii-podat-suzanne-thorpe">A/V project</a> in collaboration with Suzanne Thorpe (Time Based [UA] x ISSUE Project Room [US])</p>
+                <p><a href="https://issueprojectroom.org/video/distant-pairs-oleksii-podat-suzanne-thorpe">A/V project</a> in collaboration with Suzanne Thorpeб, Time Based (UA) x ISSUE Project Room (US)</p>
               </div>
               <div class="project">
                 <h3>2025 - <a href="https://pro.festivalscope.com/film/all-roads-lead-to-you">All roads lead to you OST</a></h3>
