--- a/index.html
+++ b/index.html
@@ -152,6 +152,7 @@
           <a href="#performances">Live acts</a>
           <a href="#releases">Releases</a>
           <a href="#texts">Publications</a>
+<a href="https://www.linktr.ee/podat" target="_blank" rel="noopener noreferrer">Listen</a>
           <a href="#contact">Contact</a>
         </nav>
       </aside>
