--- a/index.html
+++ b/index.html
@@ -154,10 +154,14 @@
   #9b9bc4
         
       );
+      
       background-size: 300% 300%;
       -webkit-background-clip: text;
       -webkit-text-fill-color: transparent;
       animation: colorShift 10s linear infinite;
+    }
+    .rainbow-link:hover {
+      animation-play-state: paused;
     }
 
     @keyframes colorShift {
