--- a/index.html
+++ b/index.html
@@ -16,6 +16,11 @@
   background: #505050;   /* Spotify зелений */
   color: #f5f5f5;
 }
+    .rainbow-link::selection {
+  background: #505050; /* або будь-який однотонний фон */
+  -webkit-text-fill-color: #f5f5f5; /* Замість transparent */
+  color: #f5f5f5;
+}
     
     .about-box {
       max-width: 520px;
