--- a/index.html
+++ b/index.html
@@ -1,9 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
+ <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
   <title>Oleksii Podat / Олексій Подать</title>
+
+  <!-- SEO Meta -->
+  <meta name="description" content="Oleksii Podat (Олексій Подать) is a Ukrainian avant-garde composer and sound artist working with experimental and melodic noise music. Portfolio of releases, live acts, and collaborations." />
+  <meta name="keywords" content="Oleksii Podat, Олексій Подать, composer, композитор, sound artist, саунд-арт, melodic noise, нойз, experimental music, експериментальна музика, Ukraine, Ukrainian music, українська музика" />
+  <meta name="author" content="Oleksii Podat" />
+  <meta http-equiv="Content-Language" content="en" />
+
+  <!-- Open Graph for social media -->
+  <meta property="og:title" content="Oleksii Podat / Олексій Подать — composer & sound artist" />
+  <meta property="og:description" content="Melodic noise, audiovisual works, installations, soundtracks, and experimental performances." />
+  <meta property="og:image" content="https://i.postimg.cc/k58zTtMY/temp-Image-Wx-OXOv.avif" />
+  <meta property="og:url" content="https://oleksiipodat.com" />
+  <meta property="og:type" content="website" />
+
+  <!-- Twitter Card -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="Oleksii Podat / Олексій Подать" />
+  <meta name="twitter:description" content="Ukrainian composer and sound artist. Portfolio, projects, and releases." />
+  <meta name="twitter:image" content="https://i.postimg.cc/k58zTtMY/temp-Image-Wx-OXOv.avif" />
+
+  <!-- Favicon -->
+  <link rel="icon" href="https://i.postimg.cc/k58zTtMY/temp-Image-Wx-OXOv.avif" type="image/x-icon" />
+  <link rel="apple-touch-icon" href="https://i.postimg.cc/k58zTtMY/temp-Image-Wx-OXOv.avif" />
   <style>
     /* Загальні стилі */
     body {
