--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
   <meta name="twitter:image" content="https://i.postimg.cc/k58zTtMY/temp-Image-Wx-OXOv.avif" />
 
   <!-- Favicon -->
-  <link rel="icon" href="https://i.postimg.cc/k58zTtMY/temp-Image-Wx-OXOv.avif" type="image/x-icon" />
-  <link rel="apple-touch-icon" href="https://i.postimg.cc/k58zTtMY/temp-Image-Wx-OXOv.avif" />
+  <link rel="icon" href="/favicon.ico" type="image/x-icon" />
+  <link rel="apple-touch-icon" href="/favicon.ico" />
   <style>
     /* Загальні стилі */
     body {
@@ -218,6 +218,7 @@
           <a href="#texts">Publications</a>
           <a href="#contact">Contact</a>
           <a href="https://www.linktr.ee/podat" target="_blank" rel="noopener noreferrer" class="rainbow-link">Stream</a>
+          <a href="https://www.oleksiipodat.com/blog.html">Notes</a>
         </nav>
       </aside>
       <div class="blurred-area">
