--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
       }
       .sidebar {
         width: 100%;
-        background: #fbfbfb;
+        background: #f5f5f5;
         border-bottom: 0px solid #ccc;
         padding: 18px;
         box-sizing: border-box;
