--- a/index.html
+++ b/index.html
@@ -44,6 +44,11 @@
         background: #f5f5f5;
         color: #505050;
       }
+      .sidebar h1 {
+        font-size: 18px;
+        line-height: 1.3;
+        margin: 0 0 10px 0;
+      }
       ::selection {
         background: #505050; /* Spotify зелений */
         color: #f5f5f5;
@@ -115,7 +120,9 @@
         width: 100%;
         background: #f5f5f5;
         border-bottom: 0px solid #ccc;
-        padding: 18px;
+        padding: 22px;
+        max-width: 263px;
+        text-align: left;
         box-sizing: border-box;
       }
       @media (min-width: 768px) {
@@ -128,11 +135,14 @@
       }
       .sidebar h1 {
         font-size: 20px;
-        margin-bottom: 10px;
+        margin-bottom: 49px;
         color: #464646;
       }
       .sidebar nav a {
-        display: block;
+        display: inline;
+        white-space: nowrap;
+        margin-right: 10px;
+        line-height: 1.5;
         text-decoration: none;
         color: #505050;
         margin-bottom: 2px;
