--- a/index.html
+++ b/index.html
@@ -3,41 +3,24 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
     <title>Oleksii Podat / Олексій Подать</title>
-
     <!-- SEO Meta -->
-    <meta
-      name="description"
-      content="Oleksii Podat (Олексій Подать) is a Ukrainian avant-garde composer and sound artist working with experimental and melodic noise music. Portfolio of releases, live acts, and collaborations." />
-    <meta
-      name="keywords"
-      content="Oleksii Podat, Олексій Подать, composer, композитор, sound artist, саунд-арт, melodic noise, нойз, experimental music, експериментальна музика, Ukraine, Ukrainian music, українська музика" />
+    <meta name="description" content="Oleksii Podat (Олексій Подать) is a Ukrainian avant-garde composer and sound artist working with experimental and melodic noise music. Portfolio of releases, live acts, and collaborations." />
+    <meta name="keywords" content="Oleksii Podat, Олексій Подать, composer, композитор, sound artist, саунд-арт, melodic noise, нойз, experimental music, експериментальна музика, Ukraine, Ukrainian music, українська музика" />
     <meta name="author" content="Oleksii Podat" />
     <meta http-equiv="Content-Language" content="en" />
-
-    <!-- Open Graph for social media -->
     <meta property="og:title" content="Oleksii Podat / Олексій Подать — composer & sound artist" />
-    <meta
-      property="og:description"
-      content="Melodic noise, audiovisual works, installations, soundtracks, and experimental performances." />
+    <meta property="og:description" content="Melodic noise, audiovisual works, installations, soundtracks, and experimental performances." />
     <meta property="og:image" content="https://i.postimg.cc/k58zTtMY/temp-Image-Wx-OXOv.avif" />
     <meta property="og:url" content="https://oleksiipodat.com" />
     <meta property="og:type" content="website" />
-
-    <!-- Twitter Card -->
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="Oleksii Podat / Олексій Подать" />
-    <meta
-      name="twitter:description"
-      content="Ukrainian composer and sound artist. Portfolio, projects, and releases." />
+    <meta name="twitter:description" content="Ukrainian composer and sound artist. Portfolio, projects, and releases." />
     <meta name="twitter:image" content="https://i.postimg.cc/k58zTtMY/temp-Image-Wx-OXOv.avif" />
-
-    <!-- Favicon -->
     <link rel="icon" href="/favicon.ico" type="image/x-icon" />
     <link rel="apple-touch-icon" href="/favicon.ico" />
     <style>
-      /* Загальні стилі */
       body {
         margin: 0;
         font-family: Arial, sans-serif;
@@ -46,35 +29,33 @@
       }
       .sidebar h1 {
         font-size: 18px;
-        line-height: 1.3;
+        line-height: 1.5;
         margin: 0 0 10px 0;
       }
       ::selection {
-        background: #505050; /* Spotify зелений */
+        background: #505050;
         color: #f5f5f5;
       }
       .rainbow-link::selection {
-        background: #505050; /* або будь-який однотонний фон */
-        -webkit-text-fill-color: #f5f5f5; /* Замість transparent */
+        background: #505050;
+        -webkit-text-fill-color: #f5f5f5;
         color: #f5f5f5;
       }
-
       .about-box {
         max-width: 520px;
         text-align: justify;
         line-height: 1.5;
       }
       details summary {
-        list-style: none; /* прибирає стандартну стрілку */
+        list-style: none;
         cursor: pointer;
       }
       details[open] summary p {
         display: none;
       }
       details summary::-webkit-details-marker {
-        display: none; /* прибирає стрілку в Chrome/Safari */
+        display: none;
       }
-      /* Ховаємо кнопку less, поки details не відкрито */
       .less-button {
         display: none;
         margin-top: 10px;
@@ -85,7 +66,6 @@
         background: none;
         font-size: 1em;
       }
-
       h1 {
         font-size: 14px;
       }
@@ -103,36 +83,37 @@
       }
       .white-link {
         color: white;
-        text-decoration: none; /* optional: removes underline */
+        text-decoration: none;
       }
-
       .container {
         display: flex;
         flex-direction: column;
-        min-height: 100vh;
       }
       @media (min-width: 768px) {
         .container {
           flex-direction: row;
+          align-items: flex-start;
         }
       }
       .sidebar {
-        width: 100%;
-        background: #f5f5f5;
-        border-bottom: 0px solid #ccc;
-        padding: 22px;
-        max-width: 263px;
-        text-align: left;
-        box-sizing: border-box;
-      }
-      @media (min-width: 768px) {
-        .sidebar {
-          width: 250px;
-          border-right: -2px solid #ccc;
-          border-bottom: none;
-          height: 29vh;
-        }
-      }
+  width: 100%;
+  background: #f5f5f5;
+  padding: 22px;
+  text-align: left;
+  box-sizing: border-box;
+  position: relative; /* на мобілках: рухається з контентом */
+}
+
+@media (min-width: 768px) {
+  .sidebar {
+    width: 250px;
+    max-height: 100vh;
+    position: sticky; /* прилипає зверху */
+    top: 0;
+    align-self: flex-start;
+    border-right: 0px solid #ccc;
+  }
+}
       .sidebar h1 {
         font-size: 20px;
         margin-bottom: 49px;
@@ -178,8 +159,6 @@
         word-break: break-word;
         color: #505050;
       }
-
-      /* --- Ефект блюру з "діркою" навколо курсору --- */
       .blur-wrapper {
         position: relative;
         overflow: visible;
@@ -190,20 +169,16 @@
         left: 0;
         width: 100vw;
         height: 100vh;
-        pointer-events: none; /* не блокує кліки */
+        pointer-events: none;
         backdrop-filter: blur(0.5px);
-        /* Прозора дірка (радіус 3px) навколо курсора */
         mask-image: radial-gradient(circle 3px at var(--x) var(--y), transparent 0%, black 100%);
         -webkit-mask-image: radial-gradient(circle 120px at var(--x) var(--y), transparent 0%, black 100%);
         transition: mask-position 0.1s ease-out;
       }
-
-      /* Анімація переливання кольору для лінку Listen */
       .rainbow-link {
         font-weight: normal;
         text-decoration: none;
         background: linear-gradient(-45deg, #98b2a1, #b7868b, #7f8f93, #626262, #505050, #9b9bc4);
-
         background-size: 300% 300%;
         -webkit-background-clip: text;
         -webkit-text-fill-color: transparent;
@@ -212,7 +187,6 @@
       .rainbow-link:hover {
         animation-play-state: paused;
       }
-
       @keyframes colorShift {
         0% {
           background-position: 0% 50%;
