--- a/index.html
+++ b/index.html
@@ -5,18 +5,26 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Oleksii Podat / Олексій Подать</title>
     <!-- SEO Meta -->
-    <meta name="description" content="Oleksii Podat (Олексій Подать) is a Ukrainian avant-garde composer and sound artist working with experimental and melodic noise music. Portfolio of releases, live acts, and collaborations." />
-    <meta name="keywords" content="Oleksii Podat, Олексій Подать, composer, композитор, sound artist, саунд-арт, melodic noise, нойз, experimental music, експериментальна музика, Ukraine, Ukrainian music, українська музика" />
+    <meta
+      name="description"
+      content="Oleksii Podat (Олексій Подать) is a Ukrainian avant-garde composer and sound artist working with experimental and melodic noise music. Portfolio of releases, live acts, and collaborations." />
+    <meta
+      name="keywords"
+      content="Oleksii Podat, Олексій Подать, composer, композитор, sound artist, саунд-арт, melodic noise, нойз, experimental music, експериментальна музика, Ukraine, Ukrainian music, українська музика" />
     <meta name="author" content="Oleksii Podat" />
     <meta http-equiv="Content-Language" content="en" />
     <meta property="og:title" content="Oleksii Podat / Олексій Подать — composer & sound artist" />
-    <meta property="og:description" content="Melodic noise, audiovisual works, installations, soundtracks, and experimental performances." />
+    <meta
+      property="og:description"
+      content="Melodic noise, audiovisual works, installations, soundtracks, and experimental performances." />
     <meta property="og:image" content="https://i.postimg.cc/k58zTtMY/temp-Image-Wx-OXOv.avif" />
     <meta property="og:url" content="https://oleksiipodat.com" />
     <meta property="og:type" content="website" />
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="Oleksii Podat / Олексій Подать" />
-    <meta name="twitter:description" content="Ukrainian composer and sound artist. Portfolio, projects, and releases." />
+    <meta
+      name="twitter:description"
+      content="Ukrainian composer and sound artist. Portfolio, projects, and releases." />
     <meta name="twitter:image" content="https://i.postimg.cc/k58zTtMY/temp-Image-Wx-OXOv.avif" />
     <link rel="icon" href="/favicon.ico" type="image/x-icon" />
     <link rel="apple-touch-icon" href="/favicon.ico" />
@@ -96,30 +104,55 @@
         }
       }
       .sidebar {
-  width: 100%;
-  background: #f5f5f5;
-  padding: 20px;
-  text-align: left;
-  box-sizing: border-box;
-            align-self: flex-start;
-  position: sticky;
-        top: 0;
-        /* щоб рухалося разом з вмістом на мобілці */
-}
-
-@media (min-width: 768px) {
-  .sidebar {
-    width: 250px;
-    
-    position: sticky; /* прилипає при прокрутці на десктопі */
-    top: 0;
-    align-self: flex-start;
-    border-right: 0px solid #ccc;
-  }
-}
+        width: 100%;
+        background: #f5f5f5;
+        padding: 20px;
+        text-align: left;
+        box-sizing: border-box;
+        align-self: flex-start;
+        position: relative; /* для псевдоелемента */
+      }
+      /* Головна логіка для прокрутки та градієнта */
+      @media (max-width: 767px) {
+        .sidebar {
+          max-height: 13vh; /* обмежуємо висоту сайдбару */
+          overflow-y: auto; /* додаємо скрол */
+          position: sticky;
+          top: 0;
+        }
+        .sidebar::after {
+          content: "";
+          position: sticky;
+          bottom: 0;
+          left: 0;
+          width: 100%;
+          height: 0px; /* висота градієнта */
+          pointer-events: none;
+          background: linear-gradient(
+            to bottom,
+            rgba(245, 245, 245, 0) 0%,
+            rgba(245, 245, 245, 0.7) 70%,
+            rgba(245, 245, 245, 1) 100%
+          );
+          z-index: 10;
+          display: block;
+        }
+      }
+      @media (min-width: 768px) {
+        .sidebar {
+          width: 250px;
+          position: sticky;
+          top: 0;
+          align-self: flex-start;
+          border-right: 0px solid #ccc;
+        }
+        .sidebar::after {
+          display: none;
+        }
+      }
       .sidebar h1 {
         font-size: 20px;
-        margin-bottom: 49px;
+        margin-bottom: 4px;
         color: #464646;
       }
       .sidebar nav a {
