--- a/index.html
+++ b/index.html
@@ -5,26 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Oleksii Podat / Олексій Подать</title>
     <!-- SEO Meta -->
-    <meta
-      name="description"
-      content="Oleksii Podat (Олексій Подать) is a Ukrainian avant-garde composer and sound artist working with experimental and melodic noise music. Portfolio of releases, live acts, and collaborations." />
-    <meta
-      name="keywords"
-      content="Oleksii Podat, Олексій Подать, composer, композитор, sound artist, саунд-арт, melodic noise, нойз, experimental music, експериментальна музика, Ukraine, Ukrainian music, українська музика" />
+    <meta name="description" content="Oleksii Podat (Олексій Подать) is a Ukrainian avant-garde composer and sound artist working with experimental and melodic noise music. Portfolio of releases, live acts, and collaborations." />
+    <meta name="keywords" content="Oleksii Podat, Олексій Подать, composer, композитор, sound artist, саунд-арт, melodic noise, нойз, experimental music, експериментальна музика, Ukraine, Ukrainian music, українська музика" />
     <meta name="author" content="Oleksii Podat" />
     <meta http-equiv="Content-Language" content="en" />
     <meta property="og:title" content="Oleksii Podat / Олексій Подать — composer & sound artist" />
-    <meta
-      property="og:description"
-      content="Melodic noise, audiovisual works, installations, soundtracks, and experimental performances." />
+    <meta property="og:description" content="Melodic noise, audiovisual works, installations, soundtracks, and experimental performances." />
     <meta property="og:image" content="https://i.postimg.cc/k58zTtMY/temp-Image-Wx-OXOv.avif" />
     <meta property="og:url" content="https://oleksiipodat.com" />
     <meta property="og:type" content="website" />
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="Oleksii Podat / Олексій Подать" />
-    <meta
-      name="twitter:description"
-      content="Ukrainian composer and sound artist. Portfolio, projects, and releases." />
+    <meta name="twitter:description" content="Ukrainian composer and sound artist. Portfolio, projects, and releases." />
     <meta name="twitter:image" content="https://i.postimg.cc/k58zTtMY/temp-Image-Wx-OXOv.avif" />
     <link rel="icon" href="/favicon.ico" type="image/x-icon" />
     <link rel="apple-touch-icon" href="/favicon.ico" />
@@ -34,6 +26,10 @@
         font-family: Arial, sans-serif;
         background: #f5f5f5;
         color: #505050;
+      }
+      .sidebar.hide-on-scroll {
+        transform: translateY(-100%);
+        transition: transform 0.3s ease-in-out;
       }
       .sidebar h1 {
         font-size: 18px;
@@ -110,32 +106,17 @@
         text-align: left;
         box-sizing: border-box;
         align-self: flex-start;
-        position: relative; /* для псевдоелемента */
+        position: relative;
       }
-      /* Головна логіка для прокрутки та градієнта */
       @media (max-width: 767px) {
         .sidebar {
-          max-height: 13vh; /* обмежуємо висоту сайдбару */
-          overflow-y: auto; /* додаємо скрол */
-          position: sticky;
-          top: 0;
+          max-height: none;
+          overflow-y: visible;
+          position: relative;
+          top: auto;
         }
         .sidebar::after {
-          content: "";
-          position: sticky;
-          bottom: 0;
-          left: 0;
-          width: 100%;
-          height: 0px; /* висота градієнта */
-          pointer-events: none;
-          background: linear-gradient(
-            to bottom,
-            rgba(245, 245, 245, 0) 0%,
-            rgba(245, 245, 245, 0.7) 70%,
-            rgba(245, 245, 245, 1) 100%
-          );
-          z-index: 10;
-          display: block;
+          display: none;
         }
       }
       @media (min-width: 768px) {
@@ -461,26 +442,20 @@
       <div class="blur-overlay"></div>
     </div>
 
-    <script>
-      document.addEventListener("DOMContentLoaded", function () {
-        const links = document.querySelectorAll("a[href^='http']");
-        links.forEach((link) => {
-          link.setAttribute("target", "_blank");
-          link.setAttribute("rel", "noopener noreferrer");
+   <script>
+      document.addEventListener("DOMContentLoaded", () => {
+        const sidebar = document.querySelector(".sidebar");
+        let lastScrollTop = window.scrollY;
+
+        window.addEventListener("scroll", () => {
+          const currentScroll = window.scrollY;
+          if (currentScroll > lastScrollTop) {
+            sidebar.classList.add("hide-on-scroll");
+          } else {
+            sidebar.classList.remove("hide-on-scroll");
+          }
+          lastScrollTop = currentScroll <= 0 ? 0 : currentScroll;
         });
-      });
-
-      // Ефект блюру з прозорою "діркою" навколо курсору
-      const blurOverlay = document.querySelector(".blur-overlay");
-
-      window.addEventListener("mousemove", (e) => {
-        blurOverlay.style.setProperty("--x", e.clientX + "px");
-        blurOverlay.style.setProperty("--y", e.clientY + "px");
-      });
-      window.addEventListener("mouseout", () => {
-        // Ховаємо дірку при виході курсора за межі вікна
-        blurOverlay.style.setProperty("--x", "-9999px");
-        blurOverlay.style.setProperty("--y", "-9999px");
       });
     </script>
   </body>
