--- a/index.html
+++ b/index.html
@@ -5,18 +5,26 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Oleksii Podat / Олексій Подать</title>
     <!-- SEO Meta -->
-    <meta name="description" content="Oleksii Podat (Олексій Подать) is a Ukrainian avant-garde composer and sound artist working with experimental and melodic noise music. Portfolio of releases, live acts, and collaborations." />
-    <meta name="keywords" content="Oleksii Podat, Олексій Подать, composer, композитор, sound artist, саунд-арт, melodic noise, нойз, experimental music, експериментальна музика, Ukraine, Ukrainian music, українська музика" />
+    <meta
+      name="description"
+      content="Oleksii Podat (Олексій Подать) is a Ukrainian avant-garde composer and sound artist working with experimental and melodic noise music. Portfolio of releases, live acts, and collaborations." />
+    <meta
+      name="keywords"
+      content="Oleksii Podat, Олексій Подать, composer, композитор, sound artist, саунд-арт, melodic noise, нойз, experimental music, експериментальна музика, Ukraine, Ukrainian music, українська музика" />
     <meta name="author" content="Oleksii Podat" />
     <meta http-equiv="Content-Language" content="en" />
     <meta property="og:title" content="Oleksii Podat / Олексій Подать — composer & sound artist" />
-    <meta property="og:description" content="Melodic noise, audiovisual works, installations, soundtracks, and experimental performances." />
+    <meta
+      property="og:description"
+      content="Melodic noise, audiovisual works, installations, soundtracks, and experimental performances." />
     <meta property="og:image" content="https://i.postimg.cc/k58zTtMY/temp-Image-Wx-OXOv.avif" />
     <meta property="og:url" content="https://oleksiipodat.com" />
     <meta property="og:type" content="website" />
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="Oleksii Podat / Олексій Подать" />
-    <meta name="twitter:description" content="Ukrainian composer and sound artist. Portfolio, projects, and releases." />
+    <meta
+      name="twitter:description"
+      content="Ukrainian composer and sound artist. Portfolio, projects, and releases." />
     <meta name="twitter:image" content="https://i.postimg.cc/k58zTtMY/temp-Image-Wx-OXOv.avif" />
     <link rel="icon" href="/favicon.ico" type="image/x-icon" />
     <link rel="apple-touch-icon" href="/favicon.ico" />
@@ -27,7 +35,7 @@
         background: #f5f5f5;
         color: #505050;
       }
-      
+
       .sidebar h1 {
         font-size: 18px;
         line-height: 1.5;
@@ -439,11 +447,10 @@
       <div class="blur-overlay"></div>
     </div>
 
-   <script>
+    <script>
       document.addEventListener("DOMContentLoaded", () => {
         const sidebar = document.querySelector(".sidebar");
         let lastScrollTop = window.scrollY;
-
     </script>
   </body>
 </html>
