--- a/index.html
+++ b/index.html
@@ -273,7 +273,7 @@
                     <a href="https://issueprojectroom.org/video/distant-pairs-oleksii-podat-suzanne-thorpe"
                       >A/V project</a
                     >
-                    in collaboration with Suzanne Thorpeб, Time Based (UA) x ISSUE Project Room (US)
+                    in collaboration with Suzanne Thorpe, Time Based (UA) x ISSUE Project Room (US)
                   </p>
                 </div>
                 <div class="project">
