--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
     <div class="blur-wrapper">
       <div class="container">
         <aside class="sidebar">
-          <h1><a href="https://www.oleksiipodat.com" class="no-underline">Oleksii Podat</a></h1>
+          <h1><a href="index.html" class="no-underline">Oleksii Podat</a></h1>
           <nav>
             <a href="#about">About</a>
             <a href="#work">Projects</a>
