--- a/index.html
+++ b/index.html
@@ -399,7 +399,7 @@
               <h2>Releases</h2>
               <p><b>2024</b> - <a href="https://orcd.co/nadni" target="_blank" rel="noopener noreferrer">лагідні стосунки зі світом на дні землі</a> - ПОТОП</p>
               <p><b>2023</b> - <a href="https://podat.bandcamp.com/album/golden-gate" target="_blank" rel="noopener noreferrer">Golden Gate</a></p>
-              <p><b>2019</b> - I Regret Everything I Have Ever Done Online - Gin&Platonic</p>
+              <p><b>2019</b> - I Regret Everything I Have Ever Done Online - GinPlatonic</p>
               <p><b>2018</b> - Love</p>
               <p style="font-size: 16px">
                 <a href="https://www.linktr.ee/podat" target="_blank" rel="noopener noreferrer">more</a>
@@ -442,18 +442,22 @@
     </div>
 
     <script>
-      document.addEventListener("DOMContentLoaded", () => {
-        const sidebar = document.querySelector(".sidebar");
-        let lastScrollTop = window.scrollY;
-    </script>
-    <script>
-    const img = document.getElementById('blur-image');
-    let blurLevel = 0;
+      const img = document.getElementById('blur-image');
+let blurLevel = 0;
+let scaleLevel = 1;
 
-    img.addEventListener('click', () => {
-      blurLevel += 1; // кожен клік додає 1px розмиття
-      img.style.filter = `blur(${blurLevel}px)`;
-    });
+img.parentElement.addEventListener('click', () => {
+  blurLevel += 1;
+
+
+
+  img.style.filter = `blur(${blurLevel}px)`;
+  img.style.transform = `scale(${scaleLevel})`;
+
+});
+      
   </script>
+    <script></script>
+          
   </body>
 </html>
