--- a/blog.html
+++ b/blog.html
@@ -214,7 +214,7 @@
       <aside class="sidebar">
         <h1><a href="https://www.oleksiipodat.com" class="no-underline">Oleksii Podat</a></h1>
         <nav>
-          <p1>Notes</p1>
+          <h1>Notes</h1>
         </nav>
         </aside>
       <div class="blurred-area">
