--- a/blog.html
+++ b/blog.html
@@ -221,8 +221,9 @@
         <main class="content">
           <section id="about">
             <div class="about-box">
-              <h2>Note 03.08.2025</h2>
-              <p>=sample=</p>
+              <h2>03.08.2025</h2>
+              <p><img src="images/030825.jpg" alt="oleksii podat 030825" width="302" height="403"/></p>
+              <p>well</p>
             </div>
           </section>
         </main>
