--- a/blog.html
+++ b/blog.html
@@ -212,9 +212,9 @@
   <div class="blur-wrapper">
     <div class="container">
       <aside class="sidebar">
-        <h1><a href="https://www.oleksiipodat.com" class="no-underline">Oleksii Podat</a></h1>
+        <h1><a href="https://www.oleksiipodat.com" class="no-underline">back</a></h1>
         <nav>
-          <h1>Notes</h1>
+          <h1></h1>
         </nav>
         </aside>
       <div class="blurred-area">
