--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
       .textcolor {
         font-weight: normal;
         text-decoration: none;
-        background: linear-gradient(-60deg, #0000ff, #ff003f, #b3b3f5, #626262, #505050, #9b9bc4);
+        background: linear-gradient(-60deg, #ff003f, #b3b3f5, #626262, #505050, #9b9bc4);
         background-size: 300% 300%;
         -webkit-background-clip: text;
         -webkit-text-fill-color: transparent;
