--- a/blog.html
+++ b/blog.html
@@ -221,9 +221,10 @@
         <main class="content">
           <section id="about">
             <div class="about-box">
-              <h2>03.08.2025</h2>
-              <p><img src="images/030825.jpg" alt="oleksii podat 030825" width="302" height="403"/></p>
+              <h2>03.08.-08.08.2025</h2>
               <p>well</p>
+              <img src="https://i.postimg.cc/3WnXgRn8/temp-Imageav-BTTj.avif" alt="temp-Imageav-BTTj"/>
+<img src="https://i.postimg.cc/vgGnnFnx/temp-Image-LMZ3-S7.avif" alt="temp-Image-LMZ3-S7"/>
             </div>
           </section>
         </main>
